<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateUserDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_user"
        />

    <EditText
        android:id="@+id/update_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        android:textSize="@dimen/size_medium"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/update_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="@dimen/size_medium"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/update_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="@dimen/size_medium"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button_updateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_user" />


</LinearLayout>